--- a/langchain-chatglm.ipynb
+++ b/langchain-chatglm.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "!git clone https://github.com/THUDM/ChatGLM3.git"
+    "!git clone https://github.com/nullskymc/ChatGLM3.git"
    ]
   },
   {
@@ -98,15 +98,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint_url = \"http://0.0.0.0:8000/v1/chat/completions\"\n",
+    "endpoint_url = \"http://127.0.0.1:8000/v1/chat/completions\" \n",
+    "\n",
     "llm = ChatGLM3(\n",
     "    endpoint_url=endpoint_url,\n",
     "    max_tokens=80000,\n",
-    "    prefix_messages=messages,\n",
     "    top_p=0.9,\n",
     ")\n",
     "\n",
-    "model_id = \"Jerry0/m3e-base\"\n",
+    "\n",
+    "model_id = \"iic/nlp_corom_sentence-embedding_chinese-base\"\n",
     "embeddings = ModelScopeEmbeddings(model_id=model_id)\n",
     "\n",
     "template = \"\"\"{question}\"\"\"\n",
@@ -119,7 +120,74 @@
    "id": "cc773735",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "\n",
+    "def pdf_loader(url):\n",
+    "    # pdf文档加载器\n",
+    "    loader = PyPDFLoader(url)\n",
+    "    docs = loader.load_and_split()\n",
+    "    return docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d70d1e3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.vectorstores import FAISS\n",
+    "from langchain_text_splitters import CharacterTextSplitter\n",
+    "\n",
+    "#以某一系列文本创建以faiss为后端的向量数据库，创建完后的数据库较大，耐心等待\n",
+    "\n",
+    "\n",
+    "def create_vector_db(data_path, db_path, loader):\n",
+    "    text_splitter = CharacterTextSplitter(chunk_size=500, chunk_overlap=50)\n",
+    "    data = loader(data_path)\n",
+    "    docs = text_splitter.split_documents(data)\n",
+    "    db = FAISS.from_documents(docs, embeddings)\n",
+    "    db.save_local(db_path)  #保存路径\n",
+    "\n",
+    "create_vector_db(\"./data_text.pdf\", \"./vector_db/water_db\", pdf_loader)  # 创建数据库样例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29725a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+    "from langchain.chains.retrieval import create_retrieval_chain\n",
+    "from langchain_community.vectorstores.faiss import FAISS\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "# 创建检索链\n",
+    "\n",
+    "input_text = '你的问题'\n",
+    "prompt = ChatPromptTemplate.from_template(\n",
+    "        \"\"\"\n",
+    "        你的预设\n",
+    "\n",
+    "        <context>\n",
+    "        {context}\n",
+    "        </context>\n",
+    "\n",
+    "        Question: {input}\n",
+    "        \"\"\")\n",
+    "\n",
+    "new_db = FAISS.load_local(\"./vector_db/water_db\", embeddings, allow_dangerous_deserialization=True)\n",
+    "# 合成文档链\n",
+    "document_chain = create_stuff_documents_chain(llm, prompt)\n",
+    "\n",
+    "retriever = new_db.as_retriever()  # 从向量数据库中检索\n",
+    "retrieval_chain = create_retrieval_chain(retriever, document_chain)\n",
+    "\n",
+    "response = retrieval_chain.invoke({\"input\": input_text})\n",
+    "print(response['answer'])"
+   ]
   }
  ],
  "metadata": {
@@ -138,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
